Fix dark mode entities

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -87,7 +87,7 @@ html {
 html[data-theme='dark'] {
   --link-color: rgba(255, 255, 255,.9);
   --link-color-dimmed: rgba(255, 255, 255, .4);
-  --text-color: rgba(0, 0, 0, 1);
+  --text-color: rgba(255, 255, 255, 1);
   --hint-color: #8492a6;
   --background-color: #121217;
   --shadow-color: rgba(255, 255, 255, 0.1);
